--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,44 @@
-.App {
-  text-align: center;
+.App .container {
+  width: 100%;
+  max-width: none;
+  max-height: 600px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App > .container > .row {
+  border-bottom: 1px solid #BFBFBF;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h1,h2,h3,h4,h5,h6,p,span, select, option {
+  color: #313131;
+  font-family: 'Open Sans', Arial, Helvetica, sans-serif;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
+h2 {
+  font-family: 'Fjalla One', Arial, sans-serif;
+  font-size: 36px;
+  margin-top: 30px;
+  color: #222222;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #EDEDED;
+  width: calc(100% + 15px);
 }
 
-.App-link {
-  color: #61dafb;
+.btn_style {
+  border-radius: 4px;
+  background-color: rgba(27,128,71,0.5);
+  color: #ffffff;
+  font-size: 12px;
+  text-transform: uppercase;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: bold;
+  letter-spacing: 0rem;
+  line-height: 1.3;
+  padding: 10px 16px;
+  transition: 200ms 100ms;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn_style:hover {
+  background-color: white;
+  color: rgba(27,128,71,0.5);
 }
