--- a/src/Map.css
+++ b/src/Map.css
@@ -12,6 +12,24 @@
   height: 100%;
 }
 
+.mapOutline {
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  stroke: #808080;
+  fill: none;
+  stroke-width: 0.25px;
+  stroke-miterlimit: 10;
+}
+
+g rect, g path, g polygon {
+  fill: #ffffff;
+  stroke: #010101;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  stroke-width: 0.25px;
+}
+
+
 .Map_container.col-md-8 {
   padding-right: 0px;
   padding-left: 0px;
@@ -26,7 +44,6 @@
   stroke-width: 1px !important;
   stroke: red !important;
 }
-
 
 
 
