--- a/src/SearchBar.css
+++ b/src/SearchBar.css
@@ -54,6 +54,7 @@
   padding: 2px 7px;
   color: #A8A8A8;
   border: 1px solid #707070;
+  border-left: 0px;
 }
 
 .SearchBar_container #searchBySubmit {
